libs/preprocessor/tests/errors/pe9_function_call_argument_count/stderr.ansi
[0m[1m[38;5;9merror[PE9][0m[1m: function call with incorrect number of arguments[0m
  [0m[34m┌─[0m source.hpp:3:1
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m #define HELLO(var) Hello var
  [0m[34m│[0m         [0m[34m-----[0m [0m[34mdefined here with 1 argument[0m
[0m[34m2[0m [0m[34m│[0m 
[0m[34m3[0m [0m[34m│[0m [0m[31mHELLO[0m(world,aceteam)
  [0m[34m│[0m [0m[31m^^^^^[0m [0m[31mcalled with 2 arguments[0m

